--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button onclick="generate" id="generate" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
+    <span id="passwordText">password</span>
+    <span id="generateBtn">generate</span>
     <script src="script.js"></script>
   </body>
 </html>
